# researcher_ai

./: .env.example  .gitignore  README.md  docs_to_neo4j.ipynb  pyproject.toml  pyproject.toml.temp  run_agent.ipynb
agent/: actions.py  agent.py  agent_logger.py  agent_run_model.py
agent/models/: question_node.py
agent/ollama/: client.py
agent/prompts/: compile_answer.py  create_questions.py  hypothetical_answer.py  most_pertinent_question.py  prompt_logger.py  question_atomizer.py  refine_answer.py  retrieval_qa.py
agent/retrievers/: base_retriever.py  neo4j_retriever.py  pg_retriever.py
data/: input_graph_tree.json
